--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,23 @@ jobs:
             wallissonbrk/kube-news:latest
             wallissonbrk/kube-news:${{github.run_number}}
             
+  CD:
+    runs-on: ubuntu-latest
+  
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Kubernetes Set Context
+        uses: Azure/k8s-set-context@v3.0
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+          
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v4.2
+        with:
+          images: wallissonbrk/kube-news:${{github.run_number}}
+          manifests: k8s/deployment.yaml
+          
+          
+          
