--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -41,7 +41,7 @@ kind: Deployment
 metadata:
   name: kubenews
 spec:
-  replicas: 5
+  replicas: 3
   selector:
     matchLabels:
       app: kubenews
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
       - name: kubenews
-        image: wallissonbrk/kube-news:v2
+        image: wallissonbrk/kube-news:v1
         env:
         - name: DB_DATABASE
           value: "kubenews"
@@ -74,4 +74,4 @@ spec:
   - port: 80
     targetPort: 8080
     nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
